# 2-oji-uzduotis

./: CMakeLists.txt  README.md  funkcijos.cpp  funkcijos.h  kursiokai.txt  main.cpp  studentas.h  vpradine.cpp
src/: funkcijos.cpp  funkcijos.h  main.cpp  studentas.cpp  studentas.h
